<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.javadev</groupId>
    <artifactId>orderdatabase</artifactId>
    <version>1.14-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>java/swing application to create/update/search orders</name>
    <description>The java/swing application to create/update/search orders</description>
    <url>https://github.com/javadev/orderdatabase</url>
  
    <developers>
        <developer>
            <id>javadev</id>
            <name>Valentyn Kolesnikov</name>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/javadev/orderdatabase.git</connection>
        <developerConnection>scm:git:git://github.com/javadev/orderdatabase.git</developerConnection>
        <url>https://github.com/javadev/orderdatabase</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.github.javadev.orderdatabase.Form1</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>META-INF/COPYRIGHT.html</exclude>
                                        <exclude>META-INF/LICENSE*</exclude>
                                        <exclude>META-INF/NOTICE*</exclude>
                                        <exclude>META-INF/README.txt</exclude>
                                        <exclude>META-INF/DEPENDENCIES*</exclude>
                                        <exclude>LICENSE.txt</exclude>
                                        <exclude>rhinoDiff.txt</exclude>
                                        <exclude>license/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.wvengen</groupId>
                <artifactId>proguard-maven-plugin</artifactId>
                <version>2.0.14</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>proguard</goal></goals>
                    </execution>
                </executions>
                <configuration>
                    <options>
                        <option>-allowaccessmodification</option>
                        <option>-keep public class org.jdesktop.**, com.github.javadev.orderdatabase.**, com.github.underscore.**</option>
                        <option>-keep public class com.mysql.** {*;}</option>
                        <option>-dontwarn</option>
                        <option>-keepclassmembers class * { *** main(java.lang.String[]); }</option>
                        <option>-dontoptimize</option>
                        <option>-dontobfuscate</option>
                        <option>-ignorewarnings</option>
                        <option>-dontnote</option>
                        <option>-keep class org.apache.poi.xssf.** { *; }</option>
                        <option>-keep class org.apache.poi.ss.** { *; }</option>
                        <option>-keep class org.apache.poi.hssf.** { *; }</option>
                        <option>-keep class org.apache.xmlbeans.** { *; }</option>
                        <option>-keep class schemaorg_apache_xmlbeans.** { *; }</option>
                        <option>-keep class schemasMicrosoftComOfficeExcel.** { *; }</option>
                        <option>-keep class schemasMicrosoftComOfficeOffice.** { *; }</option>
                        <option>-keep class schemasMicrosoftComVml.** { *; }</option>
                        <option>-keep class org.openxmlformats.schemas.** { *; }</option>
                        <option>-keep class ch.qos.** { *; }</option>
                        <option>-keep class org.slf4j.** { *; }</option>
                        <option>-keepclassmembers enum * {    public static **[] values();    public static ** valueOf(java.lang.String);}</option>
                    </options>
                    <libs>
                        <lib>${java.home}/lib/rt.jar</lib>
                        <lib>${java.home}/lib/jce.jar</lib>
                    </libs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.6</version>
                <configuration>
                    <reportPlugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.18</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.3</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>2.4</version>
            </plugin>
                    </reportPlugins>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.javadev</groupId>
            <artifactId>underscore</artifactId>
            <version>1.45</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.8</version>
        </dependency>
        <dependency>
            <groupId>com.github.javadev</groupId>
            <artifactId>moneytostr</artifactId>
            <version>1.14</version>
        </dependency>
        <dependency>
            <groupId>com.firebase</groupId>
            <artifactId>firebase-client-jvm</artifactId>
            <version>[2.5.2,)</version>
        </dependency>
        <dependency>
            <groupId>com.firebase</groupId>
            <artifactId>firebase-token-generator</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.13</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
